# ccpy

./: cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitignore  pyproject.toml
