[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = ""
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email }}>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "*"
pylint = "*"
mypy = "*"
ipython = "*"
isort = "*"

[tool.poetry-dynamic-versioning]
enable = true

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[tool.pylint.messages_control]
extension-pkg-whitelist = "pydantic"
disable = []
good-names = [
    "ex",  # exception
    "v",   # pydantic validator value field
]

[tool.pyright]
reportGeneralTypeIssues = false
reportPrivateImportUsage = false
